html/css/style.css
/* ... */
/*.footnote_anchor {
    margin-top: -4em;
    visibility: hidden;
    position: absolute;
}*/

.card-header p {
  font-size: 14px;
}

.tocTable_filter label {
  padding-left: 0.5em;
}

#tocTable td,
th {
  font-size: 14px;
}

div.dataTables_wrapper div.dataTables_filter input {
  display: block !important;
  margin: 0 !important;
}

.capitalize {
  text-transform: capitalize;
}

.fade {
  display: none;
}

.identS {
  margin-left: -5.5em;
  margin-bottom: -2.5em;
}

.identS:hover {
  cursor: pointer;
}

.identS[alt] {
  position: relative;
  /*text-decoration: underline dotted;*/
}

.identS[alt]:hover::after,
.identS[alt]:focus::after {
  content: attr(alt);
  position: absolute;
  bottom: 50px;
  width: auto;
  white-space: nowrap;
  border-radius: 0.25rem;
  font-size: 16px;
  padding: 3px 5px;
  background-color: #f1f1f1;
}

.linenumbers {
  margin: 0 1.5em 0 0;
}

.linenumbersVisible {
  color: #444;
}

.linenumbersTransparent {
  color: transparent;
}

.verseline {
  margin: 0 1.5em 0 0;
}

.numbered > li {
  display: block;
  list-style: none !important;
  padding: 0.3em;
}

.numbered > li::before {
  display: inline-block;
  content: attr(data-no) ". ";
  text-indent: -3em;
}

#show-text {
  cursor: pointer;
}

.about-text-hidden > table > tbody > tr > th,
.about-text-hidden > table > tbody > tr > td {
  border: none;
  padding: 0.5em;
}

.about-text-hidden > table > tbody > tr > th {
  width: 15%;
  max-width: 15%;
  border-right: 1px solid #dedede;
}

.navBarLetters > table > tbody > tr > th,
.navBarLetters > table > tbody > tr > td {
  border: none;
}

.navBarLetters > table > tbody > tr > td {
  padding: 0.2em;
  vertical-align: middle;
}

#wrapper-hero-amp > .row {
  padding-top: 2em;
  /*    background: url("../images/letter-background.png") 0 0 repeat;*/
}

/* Datatables, provided by https://github.com/babslgam */

div.dataTables_wrapper div.dataTables_filter input {
  display: block;
  margin-left: 0;
}

div.dataTables_filter {
  text-align: left !important;
}

.arrow {
  max-width: 18px;
}

.dataTables_wrapper table {
  width: 100%;
}

.dataTables_info {
  text-align: center;
}

.btn-link {
  font-size: 20px;
}

.exportbuttons {
  text-align: right;
}

/* main navigation */

.navbar {
  border-bottom: 5px solid #615a60 !important;
  /*border-bottom: none !important;*/
  background-color: #fff;
}

.navbar .navbar-nav {
  margin-right: 0 !important;
}

.navbar-collapse {
  margin-left: 2em;
}

#navBarLetters {
  margin: 2em auto 2em auto;
  border: 0;
}

.nav-tabs {
  border: 0;
}

.navbar .navbar-collapse .navbar-search {
  border-color: #b59890;
  border-radius: 0.25rem;
}

.navbar .navbar-collapse .navbar-search:hover {
  border-color: #615a60;
}

/**** Font Aweseome ***/
.far {
  font-family: "Font Awesome 5 Free" !important;
}

.img-fluid {
  max-width: 160% !important;
  max-height: 160% !important;
}

.card {
  margin-top: 1em;
  box-shadow: 4px 4px 9px 0 rgba(0, 0, 0, 0.1);
  border-radius: 0.5rem;
  word-wrap: break-word;
  word-break: break-word;
}

.index-card > .card-body {
}

.index-card {
  border-top: 5px solid #615a60;
  /*opacity: .6;*/
  transition: transform 0.2s;
}

.index-card:hover {
  transform: scale(1.02);
}

.index-link:hover {
  text-decoration: none !important;
}

.modal-body table th,
td {
  padding: 0.5em;
}

/* timeline auden biography */

/* js-timeline */

#exampleModalLong {
  background-color: rgba(0, 0, 0, 0.6);
}

.timeline-modal {
  background-color: transparent;
  border: 0;
}

.tei-logo {
  padding-right: 2em;
}

#title-nav {
  border-bottom: 1px dashed #dedede;
}

button.close {
  color: #fff;
}

.timeline-dots button {
  color: #f1f1f1;
}

.timeline-dots li.slide-active button {
  color: #b59890;
}

.timeline-list {
  margin: 0 auto;
  border-radius: 0.5rem;
}

.timeline-dots-wrap.bottom {
  bottom: -60px;
}

.timeline-item {
  background-color: #ddd;
  /*border-radius: .5rem;*/
}

.timeline-horizontal .timeline-dots-wrap {
  height: 60px;
}

#timeline-heading {
  margin: 0 auto;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100px;
  height: 100px;
  color: #fff;
  background-color: #615a60;
  background-repeat: no-repeat;
  border-radius: 50%;
  border: 6px solid #b59890;
  z-index: 2;
  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
  transition: transform 1s;
}

#timeline-heading:hover {
  transform: scale(1.05);
}

.timeline > .col-md-5 {
  z-index: 1;
}

.timeline:before {
  top: 0;
  bottom: 0;
  position: absolute;
  content: " ";
  width: 3px;
  background-color: #ccc;
  left: 50%;
  margin-left: -1.5px;
  z-index: 0;
}
.timeline-panel-left {
  margin-top: 0.5em;
  border: 1px solid #ccc;
  /*border-bottom: 5px solid #615a60;
    border-top: 5px solid #615a60;*/
  transition: transform 0.2s;
  font-size: 12px;
}

.timeline-panel-right {
  margin-top: 0.5em;
  border: 1px solid #ccc;
  /*border-bottom: 5px solid #615a60;
    border-top: 5px solid #615a60;*/
  transition: transform 0.2s;
  font-size: 12px;
}

/*.timeline-panel-right > .card-body {
    max-height: 58px;
    overflow: hidden;
}

.timeline-panel-left > .card-body {
    max-height: 58px;
    overflow: hidden;
}*/

/*.timeline-panel-right > .card-body {
    display: none;
    visibility: hidden;
    opacity: 0;
    transition: visibility 2s, opacity 1s linear, display 2s;
}

.timeline-panel-left > .card-body {
    display: none;
    visibility: hidden;
    opacity: 0;
    transition: visibility 2s, opacity 1s linear, display 2s;
}

.timeline-panel-left:hover > .card-body {    
    visibility: visible;
    opacity: 1;
    display: block;
}

.timeline-panel-right:hover > .card-body {    
    visibility: visible;
    opacity: 1;
    display: block;
}*/

.timeline-panel-right:hover,
.timeline-panel-left:hover {
  transform: scale(1.02);
}
/* ... */

